NCF-1107: icon alignment and other bugs fixed

--- a/docroot/profiles/unicef/themes/custom/erpw/theme-resources/scss/components/_service-type.scss
+++ b/docroot/profiles/unicef/themes/custom/erpw/theme-resources/scss/components/_service-type.scss
@@ -226,8 +226,10 @@
 	}
 	.views-field-field-service-type-icon {
 		position: absolute;
-		top: 20px;
-    left: 22px;
+    top: 24px;
+    left: 10px;
+    width: 50px;
+    text-align: center;
 	}
 	.views-field-field-service-type-color {
 		display: inline-block;
